# miniMD

./: CMakeLists.txt  minimd.json
kokkos/: CMakeLists.txt  Makefile  atom.cpp  atom.h  force_eam.cpp  force_lj.cpp  integrate.cpp  integrate.h  ljs.cpp  ljs.h  neighbor.cpp  neighbor.h  output.cpp  setup.cpp  types.h
kokkos/data/: hdf5_config.json
scripts/: launch.16.slurm  launch.32.slurm  launch.4.slurm  launch.8.slurm  launch.slurm  process_results.bash
